syntax = "proto3";

package hello;

message HelloArgs{
    string arg = 1;
}
