syntax = "proto3";

package hello;

message HelloRunnerResult{
    string data = 1;
}
