syntax = "proto3";

package legacy;

message LegacyArgs {
  string test_input = 1;
  int32 test_number = 2;
}
